fix: 修复图标导入问题和依赖版本兼容性
- 将 @ant-design/icons 从 ^6.1.0 降级到 ^5.3.7 以解决兼容性问题
- 添加 clean-cache 脚本用于清理 Vite 缓存
- 确保所有图标导入使用标准 Ant Design 图标

--- a/project-management-platform/package.json
+++ b/project-management-platform/package.json
@@ -11,13 +11,14 @@
     "preview": "pnpm install --prefer-offline && vite preview",
     "install-deps": "pnpm install --prefer-offline",
     "clean": "rm -rf node_modules .pnpm-store pnpm-lock.yaml && pnpm store prune",
+    "clean-cache": "rm -rf node_modules/.vite && rm -rf node_modules/.vite-temp",
     "test": "jest --config jest.config.cjs",
     "test:watch": "jest --config jest.config.cjs --watch",
     "test:coverage": "jest --config jest.config.cjs --coverage",
     "test:ci": "jest --config jest.config.cjs --ci --coverage --watchAll=false"
   },
   "dependencies": {
-    "@ant-design/icons": "^6.1.0",
+    "@ant-design/icons": "^5.3.7",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
